--- a/style.css
+++ b/style.css
@@ -1,12 +1,3 @@
-<!--
- __  __       ____  
-|  \/  |     / ___| 
-| \  / |    | | __  
-| |\/| |    | |(  | 
-| |  | |  _ | |_) |  _ 
-(_)  (_) (_) \____| (_)
-
---> 
 * {
   box-sizing: border-box;
   margin: 0;
@@ -56,6 +47,7 @@ header p {
   border: none;
   font-size: 1.2em;
   text-align: left;
+  text-decoration: none;
   margin-bottom: 20px; /* More space below the message button */
   transition: font-style 0.3s ease; /* Normal to italic on toggle */
 }
@@ -104,13 +96,12 @@ header p {
 .projects-section, .templates-section, .archive-section {
   padding: 20px;
   margin: 0 auto;
-  width: 100%; /* Full width for desktop */
+  width: 100vw; /* Full width for desktop */
 }
 
 h2 {
   text-align: left;
   font-size: 1.5em;
-  text-transform: uppercase;
   margin-bottom: 20px;
 }
 
