--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body::before {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background: rgba(255, 255, 255, 0.4);
   z-index: -1; /* This puts the overlay behind the content */
 }
@@ -109,7 +109,8 @@ h2 {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
-  padding: 0 20px;
+  padding-left: 10px;
+  padding-right: 10px;
   width: 100%; /* Full width for the container */
 }
 
