--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body::before {
   width: 100vw;
   height: 100vh;
   background: rgba(255, 255, 255, 0.4);
-  z-index: -1; /* This puts the overlay behind the content */
+  z-index: -10; /* This puts the overlay behind the content */
 }
 
 header {
@@ -47,6 +47,7 @@ header p {
   border: none;
   font-size: 1.2em;
   text-align: left;
+  font-color: black;
   text-decoration: none;
   margin-bottom: 20px; /* More space below the message button */
   transition: font-style 0.3s ease; /* Normal to italic on toggle */
