--- a/modde.css
+++ b/modde.css
@@ -69,9 +69,13 @@ nav a.active {
 .main-container {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 40px;
 }
-
+.combined-container {
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+}
 .content {
     display: flex;
     justify-content: left;
@@ -93,8 +97,6 @@ nav a.active {
 
 .info {
     height: 100px;
-    overflow: hidden;
-    font-size: 12px;
 }
 
 .info h2 {
@@ -121,14 +123,27 @@ nav a.active {
     cursor: pointer;
 }
 
+.iframe-container {
+  width: 100%;
+  height: 0;
+  padding-bottom: 75%; 
+  position: relative;
+}
+
+.iframe-container iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: none; 
+}
+
 .arrows-wrapper {
     display: flex;
     justify-content: left;
     align-items: center;
-    gap: 10px;
+    gap: 6px;
     margin-top: 2px;
-    padding-left: 10px;
-    overflow: visible;
+    padding: 10px 10px 0;
 }
 
 .arrows .arrow {
@@ -141,6 +156,13 @@ nav a.active {
     color: black;
 }
 
+.discr-container {
+    font-family: Helvetica, sans-serif;
+    font-size: 14px;
+    font-style: italic;
+    padding-left: 10px;
+}
+    
 .zoomed-container {
     position: fixed; 
     top: 0;
