--- a/modde.css
+++ b/modde.css
@@ -175,6 +175,7 @@ a:visited {
     font-size: 12px;
     font-style: italic;
     padding-left: 10px;
+    padding-right: 10px;
 }
     
 .zoomed-container {
