--- a/modde.css
+++ b/modde.css
@@ -188,6 +188,14 @@ nav a.active {
     transition: transform 0.3s ease-in-out;
 }
 
+#anim-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 25em; 
+}
+
 #board {
     display: flex;
     flex-wrap: wrap;
