--- a/modde.css
+++ b/modde.css
@@ -271,6 +271,7 @@ nav a.active {
     box-sizing: border-box;
     min-height: 5em; 
     display: none; 
+    text-decoration: none; 
 }
 
 @media (min-width: 768px) {
