--- a/modde.css
+++ b/modde.css
@@ -8,31 +8,41 @@ body {
     padding: 0;
 }
 
-header {
+.header-container {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     padding: 10px;
     overflow: visible;
+    position: sticky;
+    top: 0;
+    background-color: inherit;
+    z-index: 10;
 }
 
-h1 {
+.logo {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.logo h1 {
     font-size: 30px;
     font-weight: normal;
     line-height: 36px;
     color: black;
-    font-family: Helvetica, sans-serif;
+    font-family: 'Helvetica', 'DM Sans', sans-serif;
     margin: 0;
     white-space: nowrap;
     box-sizing: border-box; 
 }
 
-h1 a {
+.logo h1 a {
     text-decoration: none;
     color: black;
 }
 
-h1 a:hover {
+.logo h1 a:hover {
     font-family: Georgia, serif;
     text-decoration: underline;
     font-style: italic;
@@ -304,7 +314,7 @@ nav a.active {
     }
 }
 
-@media (prefers-color-scheme: dark) {
+/*@media (prefers-color-scheme: dark) {
     body {
         background-color: #fc4022;
     }
@@ -317,4 +327,4 @@ nav a.active {
     .flap { 
         color: #00ff00;
     }
-}
+}*/
