--- a/modde.css
+++ b/modde.css
@@ -50,11 +50,13 @@ body {
 }
 
 nav {
-    padding: 10px;
     display: flex;
+    width: 100%;
     justify-content: space-between;
     align-items: flex-start;
+    margin-top: 20px;
     margin-bottom: 10px;
+    background-color: inherit;
 }
 
 nav a {
