--- a/modde.css
+++ b/modde.css
@@ -3,7 +3,7 @@ body {
     background: white;
     display: flex;
     flex-direction: column;
-    font-family: Helvetica, 'DM Sans', sans-serif;
+    font-family: 'Instrument Sans', serif;
     margin: 0;
     padding: 0;
 }
@@ -32,7 +32,7 @@ body {
     font-weight: normal;
     line-height: 36px;
     color: black;
-    font-family: 'Helvetica', 'DM Sans', sans-serif;
+    font-family: 'Funnel Display', serif;
     margin-top: 10px;
     white-space: nowrap;
     box-sizing: border-box; 
@@ -69,12 +69,12 @@ nav a {
 }
 
 nav a:hover {
-    font-family: Georgia, serif;
+    font-family: Pinyon Script, cursive;
     font-style: italic;
 }
 
 nav a.active {
-    font-family: Georgia, serif;
+    font-family: Pinyon Script, cursive;
     font-style: italic;
     text-decoration: underline; 
 }
@@ -127,6 +127,7 @@ nav a.active {
     height: auto;
     aspect-ratio: 4 / 3;
     overflow: hidden;
+    position: relative;
 }
 
 .img-container img {
@@ -134,6 +135,21 @@ nav a.active {
     height: 100%;
     object-fit: cover;
     cursor: pointer;
+}
+
+.img-container .icon {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    opacity: 0.5;
+    font-size: 24px;
+    z-index: 10;
+}
+
+@media (max-width: 768px) {
+    .img-container .icon {
+        display: block;
+    }
 }
 
 .iframe-container {
@@ -170,7 +186,7 @@ nav a.active {
 }
 
 .discr-container {
-    font-family: Helvetica, sans-serif;
+    font-family: Instrument Sans, serif;
     font-size: 14px;
     font-style: italic;
     padding-left: 10px;
@@ -227,13 +243,13 @@ nav a.active {
     width: 1em; 
     height: 1.5em; 
     overflow: hidden;
-    background: #111; /* Background color */
-    border: 1px solid #333; /* Border color */
+    background: #111; 
+    border: 1px solid #333; 
     margin: 0 0.05em; 
     text-align: center;
     perspective: 1000px;
-    font-family: Helvetica, DM-Sans, sans-serif;
-    color: #fff; /* Set flap text color to green */
+    font-family: Instrument Sans, serif;
+    color: #fff; 
 }
 
 .flap::before,
@@ -243,12 +259,12 @@ nav a.active {
     width: 100%;
     height: 50%;
     left: 0;
-    background: #111; /* Keep the same background color */
+    background: #111;
     overflow: hidden;
     transition: transform 0.4s cubic-bezier(0.4, 0.0, 0.2, 1);
     backface-visibility: hidden;
     border: 1px solid #333;
-    color: inherit; /* Inherit text color from .flap */
+    color: inherit; 
 }
 
 .flap::before {
@@ -273,7 +289,7 @@ nav a.active {
 }
 
 #explanationText {
-    font-family: Helvetica, DM-Sans, sans-serif;
+    font-family: Instrument Sans, serif;
     font-size: 1em; 
     color: #000000;
     text-align: center;
