--- a/modde.css
+++ b/modde.css
@@ -44,8 +44,9 @@ body {
 }
 
 .logo a:hover {
-    font-family: Georgia, serif;
+    font-family: Pinyon Script, cursive;
     text-decoration: underline;
+    font-size: 34px;
     font-style: italic;
     padding-right: 4px;
 }
@@ -62,6 +63,7 @@ nav {
 
 nav a {
     font-size: 20px;
+    font-family: 'Funnel Display', serif;
     line-height: 22px;
     text-decoration: underline;
     color: black;
@@ -70,12 +72,14 @@ nav a {
 
 nav a:hover {
     font-family: Pinyon Script, cursive;
+    font-size: 22px;
     font-style: italic;
 }
 
 nav a.active {
     font-family: Pinyon Script, cursive;
     font-style: italic;
+    font-size: 22px;
     text-decoration: underline; 
 }
 
@@ -141,12 +145,13 @@ nav a.active {
     position: absolute;
     bottom: 10px;
     right: 10px;
-    opacity: 0.5;
+    color: white;
+    opacity: 0.7;
     font-size: 24px;
     z-index: 10;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .img-container .icon {
         display: block;
     }
