--- a/modde.css
+++ b/modde.css
@@ -125,12 +125,14 @@ nav a.active {
 .info p {
     font-family: Instrument Sans, sans;
     line-height: 1;
+    margin: 0;
 }
 .info a:link {
     color: black;
     font-family: Instrument Serif, serif;
     text-decoration: underline;
     line-height: 1;
+    margin: 0;
 }
 .info a:visited {
         color: black;
