--- a/modde.css
+++ b/modde.css
@@ -89,13 +89,14 @@ nav a.active {
 }
 .content {
     display: flex;
-    justify-content: left;
+    justify-content: flex-start; 
     align-items: flex-start;
-    gap: 10px;
+    gap: 10px; 
     margin-left: 10px;
     overflow-x: auto; 
     white-space: nowrap; 
     max-width: 100%;
+    height: auto;
 }
 
 .scroll-box {
@@ -107,7 +108,7 @@ nav a.active {
 }
 
 .info {
-    height: 100px;
+    height: 150px;
     overflow: hidden;
 }
 
@@ -117,11 +118,14 @@ nav a.active {
     font-family: Funnel Display, sans;
     margin-bottom: 6px;
 }
+
 .info p {
     font-family: Instrument Sans, sans;
     line-height: 1;
     margin: 0;
+    word-wrap: break-word;
 }
+
 .info a:link {
     color: black;
     font-family: Instrument Serif, serif;
@@ -129,9 +133,11 @@ nav a.active {
     line-height: 1;
     margin: 0;
 }
+
 .info a:visited {
-        color: black;
+    color: black;
 }
+
 .img-container {
     width: 100%;
     height: auto;
