--- a/modde.css
+++ b/modde.css
@@ -123,7 +123,7 @@ nav a.active {
 }
 
 .info p {
-    font-family: Funnel Sans, serif;
+    font-family: Instrument Sans, serif;
     line-height: 1.2;
     margin: 0;
     word-wrap: break-word;
