--- a/modde.css
+++ b/modde.css
@@ -264,7 +264,7 @@ nav a.active {
 .discr-container {
     font-size: 14px;
     font-weight: 300;
-    padding-left: 10px;
+    padding: 0 10px;
 }
     
 .zoomed-container {
