--- a/style.css
+++ b/style.css
@@ -189,10 +189,13 @@ nav a.active {
 }
 
 .iframe-container iframe {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  border: none; 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    border: none;
 }
 
 .img-container .icon {
