--- a/style.css
+++ b/style.css
@@ -298,7 +298,7 @@ nav a.active {
 
 h4 {
     font-size: 24px;
-    font-weight: normal;
+    font-weight: bold;
     padding: 10px;
     margin: 0px;
     }
