--- a/style.css
+++ b/style.css
@@ -296,9 +296,16 @@ nav a.active {
     transition: transform 0.3s ease-in-out;
 }
 
-h4 {
+h3 {
     font-size: 24px;
     font-weight: bold;
+    padding: 10px;
+    margin: 0px;
+    }
+    
+h4 {
+    font-size: 24px;
+    font-weight: normal;
     padding: 10px;
     margin: 0px;
     }
@@ -344,6 +351,10 @@ h4 {
         height: auto;
     }
     h4 {
+    font-size: 48px;
+    padding: 20px;
+    }
+    h3 {
     font-size: 48px;
     padding: 20px;
     }
