--- a/style.css
+++ b/style.css
@@ -295,13 +295,6 @@ nav a.active {
     cursor: pointer;
     transition: transform 0.3s ease-in-out;
 }
-
-h3 {
-    font-size: 24px;
-    font-weight: bold;
-    padding: 0;
-    margin: 0px;
-    }
     
 h4 {
     font-size: 24px;
@@ -309,6 +302,10 @@ h4 {
     padding: 10px;
     margin: 0px;
     }
+.bold-h4 {
+    font-size: 24px;
+    font-weight: bold;
+}
 
 @media (min-width: 701px) {
     .img-container .icon {
@@ -354,10 +351,10 @@ h4 {
     font-size: 48px;
     padding: 20px;
     }
-    h3 {
+.bold-h4 {
     font-size: 48px;
-    padding: 0;
-    }
+
+}
 }
 
 /*@media (prefers-color-scheme: dark) {
