--- a/style.css
+++ b/style.css
@@ -306,6 +306,10 @@ h4 {
     font-size: 24px;
     font-weight: bold;
 }
+.bold-h5 {
+    font-size: 36px;
+    font-weight: normal;
+}
 
 @media (min-width: 701px) {
     .img-container .icon {
@@ -353,7 +357,9 @@ h4 {
     }
 .bold-h3 {
     font-size: 48px;
-
+}
+.bold-h5 {
+    font-size: 64px;
 }
 }
 
