--- a/style.css
+++ b/style.css
@@ -313,10 +313,8 @@ h4 {
 .language-buttons {
     text-align: left;
     font-size: 18px;
-    padding-left: 10px;
-    padding-right: 10px;
-    width: auto; 
-    display: inline-block;
+    margin-left: 10px;
+    width: 40px; 
 }
 
 @media (min-width: 701px) {
@@ -371,8 +369,8 @@ h4 {
 }
 .language-buttons {
     font-size: 28px;
-    padding-left: 20px;
-    padding-right: 20px;
+    margin-left: 20px;
+    width: 60px;
 }
 }
 
