--- a/style.css
+++ b/style.css
@@ -29,35 +29,19 @@ body {
     width: 100%;
 }
 
-.logo-link {
+.logo a {
     font-size: 30px;
-    font-weight: 600;
-    letter-spacing: -2px;
+    font-weight: normal;
     line-height: 1;
     color: black;
+    letter-spacing: -2px;
     white-space: nowrap;
     box-sizing: border-box; 
     text-decoration: none;
+    cursor: pointer;
 }
 
-.logo-link:hover {
-    font-family: Times, serif;
-    font-weight: 400;
-    letter-spacing: 0px;
-    font-style: italic;
-    padding-right: 4px;
-}
-
-.about-link {
-    font-size: 30px;
-    line-height: 1;
-    letter-spacing: -2px;
-    bottom: 0px;
-    color: black;
-    text-decoration: none;
-}
-
-.about-link:hover {
+.logo a:hover {
     font-family: Times, serif;
     font-style: italic;
     letter-spacing: 0px;
@@ -146,19 +130,16 @@ nav a.active {
     overflow-wrap: break-word;
 }
 
-.info a:link {
+.info a {
     color: black;
     font-family: Times, serif;
     text-decoration: underline;
     margin: 0;
 }
 
-.info a:visited {
-    color: black;
-}
-
 .img-container {
     width: 100%;
+    background-color: #fff;
     height: auto;
     aspect-ratio: 4 / 3;
     overflow: hidden;
@@ -172,45 +153,9 @@ nav a.active {
     cursor: pointer;
 }
 
-.img-container .icon {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    color: white;
-    opacity: 0.7;
-    font-size: 24px;
-    z-index: 10;
-}
-
 .iframe-container {
   width: 100%;
-  height: 0;
-  padding-bottom: 75%; 
-  position: relative;
-}
-
-.iframe-container iframe {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height: 100%;
-    border: none;
-}
-
-.img-container .icon {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    color: white;
-    opacity: 0.7;
-    font-size: 24px;
-    z-index: 10;
-}
-
-.iframe-container {
-  width: 100%;
+background-color: #fff;
   height: 0;
   padding-bottom: 75%; 
   position: relative;
@@ -221,29 +166,6 @@ nav a.active {
   width: 100%;
   height: 100%;
   border: none; 
-}
-
-.iframe-container .icon {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    color: black;
-    opacity: 0.7;
-    font-size: 48px;
-    z-index: 10;
-    text-decoration: none; 
-}
-.iframe-container .icon a{
-    color: black;
-    opacity: 0.7;
-}
-.iframe-container .icon:hover{
-    color: black;
-    opacity: 1;
-}
-.iframe-container .icon:visited{
-    color: black;
-    opacity: 0.7;
 }
 
 .arrows-wrapper {
@@ -295,40 +217,14 @@ nav a.active {
     cursor: pointer;
     transition: transform 0.3s ease-in-out;
 }
-    
-h4 {
-    font-size: 24px;
-    font-weight: normal;
-    padding: 10px;
-    margin: 0px;
-    }
-.bold-h3 {
-    font-size: 24px;
-    font-weight: bold;
-}
-.bold-h5 {
-    font-size: 36px;
-    font-weight: normal;
-}
-
-@media (min-width: 701px) {
-    .img-container .icon {
-        display: none;
-    }
-    .iframe-container .icon {
-        display: block; 
-    }
-}
 
 @media (min-width: 768px) {
     .header-container {
         padding: 20px;
     }
-    .logo-link {
+    .logo a {
         font-size: 64px;
-    }
-    .about-link {
-        font-size: 64px;
+        letter-spacing: -4px;
     }
     .content {
         margin-left: 20px;
@@ -337,7 +233,6 @@ h4 {
         padding: 10px 20px 0;
     }
     .discr-container {
-        font-size: 16px;
         padding-left: 20px;
     }
     .info h2 {
@@ -351,26 +246,29 @@ h4 {
         width: 600px;
         height: auto;
     }
-    h4 {
-    font-size: 48px;
-    padding: 20px;
+    .discr-container {
+        font-size: 16px;
     }
-.bold-h3 {
-    font-size: 48px;
-}
-.bold-h5 {
-    font-size: 64px;
-}
 }
 
-/*@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
     body {
-        background-color: #fc4022;
+        background-color: #000;
+        color: #fff;
     }
+    .logo a {
+        color: white;
+    }
+    nav a {
+        color: white;
+    }
+    .info {
+        color: white;
+    }  
+    .info a {
+        color: white;
+    }   
     .arrow_left, .arrow_right {
-        color: #00FF00;
+        color: white;
     }
-    #explanationText {
-        color: #00ff00;
-    }
-}*/
+}
