--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     overflow: visible;
     position: sticky;
     top: 0;
-    background-color: inherit;
+    background-color: white;
     z-index: 10;
 }
 
@@ -60,7 +60,6 @@ nav {
     align-items: flex-start;
     margin-top: 20px;
     margin-bottom: 10px;
-    background-color: inherit;
 }
 
 nav a {
@@ -261,6 +260,10 @@ background-color: #fff;
         background-color: #000;
         color: #fff;
     }
+    .header-container {
+    background-color: black;
+    }
+    
     .logo a {
         color: white;
     }
