--- a/style.css
+++ b/style.css
@@ -17,7 +17,10 @@ body {
     overflow: visible;
     position: sticky;
     top: 0;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+}
     z-index: 10;
 }
 
@@ -261,7 +264,7 @@ background-color: #fff;
         color: #fff;
     }
     .header-container {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.1);
     }
     
     .logo a {
