--- a/style.css
+++ b/style.css
@@ -37,27 +37,30 @@ body {
 }
 
 .logo {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 10px;
-    width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 10px;
+  width: 100%;
+  position: relative;
 }
 
 .logo-title {
-    display: flex;
-    flex-direction: column;
-    line-height: 1;
+  position: relative;
+  display: inline-block;
 }
 
 .subtitle {
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 12px;
-    font-weight: normal;
-    line-height: 1;
-    margin-top: 4px;
-    margin-bottom: 0;
+  position: absolute;
+  bottom: -1em;
+  left: 0;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 12px;
+  line-height: 1;
+  color: black;
+  white-space: nowrap;
 }
+
 
 .logo-image img {
     height: 34px;
