--- a/style.css
+++ b/style.css
@@ -73,8 +73,7 @@ body {
     font-family: Times, serif;
     font-size: 14px;
     font-weight: 300;
-    margin-top: -10px;
-    margin-bottom: -2px;
+    margin: 0;
     text-align: left;
 }
 
@@ -83,7 +82,7 @@ nav {
     width: 100%;
     justify-content: space-between;
     align-items: flex-start;
-    margin-top: 10px;
+    margin-top: 6px;
     margin-bottom: 10px;
 }
 
@@ -282,6 +281,9 @@ background-color: #fff;
     .logo-image img {
         height: 72px;
     }
+    .subtitle {
+      font-size: 28px;
+      }
     .content {
         margin-left: 20px;
     }
