--- a/style.css
+++ b/style.css
@@ -73,7 +73,8 @@ body {
     font-family: Times, serif;
     font-size: 14px;
     font-weight: 300;
-    margin: 0;
+    margin-top: -6px;
+    margin-bottom: 0;
     text-align: left;
 }
 
@@ -283,6 +284,7 @@ background-color: #fff;
     }
     .subtitle {
       font-size: 28px;
+      margin-top: -8px;
       }
     .content {
         margin-left: 20px;
