--- a/assets/global.css
+++ b/assets/global.css
@@ -1,17 +1,20 @@
 body {
-    width: 100%;
+    width: 100vw;
     background: white;
     display: flex;
     flex-direction: column;
     font-family: Helvetica, Arial, sans-serif;
     margin-top: 106px;
     padding-bottom: 40px;
+    overflow-x: hidden;
   }
 
 .main-container {
+    width: 100%
     display: flex;
     flex-direction: column;
     gap: 40px;
+    overflow-x: hidden;
 }
 .combined-container {
     display: flex;
