--- a/assets/global.css
+++ b/assets/global.css
@@ -1,12 +1,11 @@
 body {
-    width: 100vw;
+    width: 100%;
     background: white;
     display: flex;
     flex-direction: column;
     font-family: Helvetica, Arial, sans-serif;
     margin-top: 106px;
     padding-bottom: 40px;
-    overflow-x: hidden;
   }
 
 .main-container {
