global.css aktualisieren

--- a/assets/global.css
+++ b/assets/global.css
@@ -9,9 +9,11 @@ body {
   }
 
 .main-container {
+    width: 100%
     display: flex;
     flex-direction: column;
     gap: 40px;
+    overflow-x: hidden;
 }
 .combined-container {
     display: flex;
