--- a/assets/global.css
+++ b/assets/global.css
@@ -3,7 +3,7 @@ body {
     background: white;
     display: flex;
     flex-direction: column;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: "Almarai", sans-serif;
     padding-top: 150px;
     padding-bottom: 40px;
     overflow-x: hidden;
@@ -52,7 +52,7 @@ body {
 
 .info a {
     color: black;
-    font-family: "Instrument Serif", serif;
+    font-family: "IBM Plex Mono", sans-serif;
     font-weight: 300;
     text-decoration: underline;
     font-size: 1em;
@@ -71,13 +71,6 @@ body {
     overflow-x: auto; 
     max-width: 100%;
     height: auto;
-    -webkit-overflow-scrolling: touch;
-    scrollbar-width: none; /* Firefox */
-    -ms-overflow-style: none; /* IE and Edge */
-}
-
-.content::-webkit-scrollbar {
-    display: none; /* Chrome, Safari, Opera */
 }
 
 .scroll-box {
