--- a/assets/global.css
+++ b/assets/global.css
@@ -37,13 +37,16 @@ body {
     padding-left: 10px;
     padding-right: 14px;
     padding-bottom: 10px;
+    font-size: 0.8em;
+    line-height: 0.9;
 }
 
 .info h2 {
-    font-size: 1.6em;
+    font-size: 1.2em;
     font-weight: normal;
     letter-spacing: -0.03em;
     margin-bottom: 6px;
+    line-height: 0.8;
     margin-top: 0;
 }
 
@@ -51,7 +54,6 @@ body {
     word-wrap: break-word;
     overflow-wrap: break-word;
     font-weight: 300;
-    font-size: 1em;
     letter-spacing: 0.02em;
     margin-top: 6px;
     line-height: 1;
@@ -59,9 +61,8 @@ body {
 
 .info a {
     color: black;
-    font-weight: 300;
+    font-weight: 400;
     text-decoration: underline;
-    font-size: 1em;
     margin-top: 4px;
     overflow: hidden;
 }
@@ -201,19 +202,12 @@ body {
     .info {
     padding-left: 20px;
     padding-right: 24px;
+    font-size: 1.3em;
     }
 
     .info h2 {
-        font-size: 1.9em;
+        font-size: 2.1em;
     }
-    
-.info p {
-    font-size: 1.3em;
-}
-
-.info a {
-    font-size: 1.3em;
-}
 
     .zoomed-image {
         max-width: 70vw;
