--- a/assets/global.css
+++ b/assets/global.css
@@ -42,11 +42,11 @@ body {
 }
 
 .info h2 {
-    font-size: 1.2em;
+    font-size: 1.4em;
     font-weight: normal;
     letter-spacing: -0.03em;
     margin-bottom: 6px;
-    line-height: 0.8;
+    line-height: 1;
     margin-top: 0;
 }
 
@@ -143,8 +143,8 @@ body {
     justify-content: left;
     align-items: center;
     gap: 6px;
-    margin-top: 2px;
-    padding: 10px 10px 0;
+    margin: 0;
+    padding: 4px 10px 0;
 }
 
 .arrows .arrow {
@@ -202,11 +202,11 @@ body {
     .info {
     padding-left: 20px;
     padding-right: 24px;
-    font-size: 1.3em;
+    font-size: 1.4em;
     }
 
     .info h2 {
-        font-size: 2.1em;
+        font-size: 2.2em;
     }
 
     .zoomed-image {
